Remove use of isBlank (requires Java 11)